Re-done Bug-Fixes. Validations for Task. Select checkbox working.

--- a/WhiteBears/Style/ProjectPage.css
+++ b/WhiteBears/Style/ProjectPage.css
@@ -160,6 +160,12 @@
     background-color: lightblue !important;
 }
 
+#taskError
+{
+    color: red;
+    align-content: center;
+}
+
 
 
 #taskModalContent {
