--- a/WhiteBears/Views/Project/NoteView.cshtml
+++ b/WhiteBears/Views/Project/NoteView.cshtml
@@ -6,7 +6,7 @@
 {
     <tr id="@projectNotes.ProjectNotes.ProjectNoteId">
         <td>
-            @projectNotes.ProjectNotes.SentDate
+            @projectNotes.ProjectNotes.SentDate.ToShortDateString()
         </td>
         <td>
             @projectNotes.ProjectNotes.To
