--- a/WhiteBears/Views/Project/TaskView.cshtml
+++ b/WhiteBears/Views/Project/TaskView.cshtml
@@ -5,15 +5,15 @@
 <tbody id="projectTaskTableTbody" class="projectTableTbody">
     @foreach (var task in Model)
     {
-        <tr id="@task.Task.TaskId">
-            <td>
+        <tr id="@task.Task.TaskId" class="taskID">
+            <td id="isCompleted">
                 @Html.CheckBox("task", @task.Task.IsCompleted)
             </td>
-            <td>
+            <td class="taskTB">
                 @task.Task.Title
             </td>
-            <td>
-                @task.Task.DueDate
+            <td class="taskTB">
+                @task.Task.DueDate.ToShortDateString()
             </td>
         </tr>
     }
