Fixed link from project page to  document review

--- a/WhiteBears/Views/Project/Index.cshtml
+++ b/WhiteBears/Views/Project/Index.cshtml
@@ -413,7 +413,7 @@
                 }
                 else if ($.trim(String(fileExtension)) == "docx" || $.trim(String(fileExtension)) == "doc") {
                     alert("File " + fileExtension);
-                    var url = '/DocumentReviewController/Index/' + stored;
+                    var url = '/DocumentReview/Index/' + stored;
                     window.location = url;
                 }
                 else {
