--- a/WhiteBears/Views/Shared/_Layout.cshtml
+++ b/WhiteBears/Views/Shared/_Layout.cshtml
@@ -16,11 +16,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("WhiteBears", "Home", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("WhiteBears", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Dashboard", "Index", "Dashboard")</li>
                     <li>@Html.ActionLink("Business", "About", "Home")</li>
                     <li>@Html.ActionLink("Features", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Pricing", "Contact", "Home")</li>
@@ -30,7 +30,6 @@
 
                 <ul class="nav navbar-nav pull-right">
                     <li class="pull-right">@Html.ActionLink("Sign Out", "LogOut", "Home")</li>
-                    <li class="pull-right">@Html.ActionLink("Settings", "Index", "Home")</li>
                 </ul>
             </div>
         </div>
